# memory-allocator

./: .gitignore  CMakeLists.txt  Readme.md
include/: header.h  stack.h
source/: main.c  stack.c
